meteo3: ajout des chekbox

--- a/3/css/styles.css
+++ b/3/css/styles.css
@@ -23,6 +23,7 @@ body {
     font-size: 1.5rem;
     color: white;
     text-align: center;
+    border: solid 1px black;
 }
 
 #image, #pressure, #temp, #sunrise{
