meteo3: récupération des ids des checkbox pour savoir a quel type de recherche on a a faire

--- a/3/css/styles.css
+++ b/3/css/styles.css
@@ -34,7 +34,7 @@ body {
     background-color: rgba(52, 152, 219, 0.75);
 }
 
-#general {
+#sky {
     text-align: center;
     font-size: 27px;
     color: black;
