meteo3: ajout de l'affichage des formulaires selon la radio selectionnée

--- a/3/css/styles.css
+++ b/3/css/styles.css
@@ -45,6 +45,6 @@ body {
     color: yellow;
 }
 
-#pressure, #sunrise, #sunset {
+#pressure, #sunrise, #sunset, #postalDiv, #coordsDiv {
     display: none;
 }
