--- a/3/css/styles.css
+++ b/3/css/styles.css
@@ -48,3 +48,12 @@ body {
 #pressure, #sunrise, #sunset, #postalDiv, #coordsDiv {
     display: none;
 }
+
+h3 {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn {
+    margin-bottom: 10px;
+}
